manifests/tenants/cyphria/frontend/routes/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: frontend-ingress-route
    namespace: cyphria-frontend
    annotations:
      kubernetes.io/description: "Routes traffic to the frontend service"
spec:
    hostnames:
    - 'cyphria.com'
    - '*.cyphria.com'
    parentRefs:
    - kind: Gateway
      name: hubble-ui
      namespace: kube-system
      sectionName: frontend-http
    rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: cyphria-frontend-service
          port: 80
